ol/9.8/k8s/pa-ezsso-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: ezsso
spec:
  mtls:
    mode: STRICT
